# attack-generator-cli

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  prd.md  pyproject.toml
.github/workflows/: release.yml
.showrunner/: appspec.json  release.json
attack_generator/: __init__.py  cli.py  metrics.py  models.py  pools.py  rate_limiter.py  resolver.py  runner.py  server.py  transport.py
attack_generator/builtins/: headers_api_form_v1.json  headers_api_json_v1.json  headers_web_html_v1.json  ua_api_clients.json  ua_web_desktop.json  ua_web_mobile.json
attack_generator/integrations/: __init__.py  container_control_adapter.py
examples/: basic_injection_spray.json  source_block_burst.json
schemas/: attackmap.schema.json
tests/: conftest.py  test_allowlist.py  test_builtins.py  test_cli_server.py  test_container_control_adapter.py  test_convert_v0.py  test_metrics.py  test_models.py  test_resolver.py  test_runner_dryrun.py  test_runner_manager.py  test_schema.py  test_transport_auth.py
tools/: convert_v0.py
